style: improve in form display

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,6 +29,9 @@
             <label class="form-label">Quantity</label>
             <input type="text" class="form-input input-quantity" placeholder="Quantity">
         </div>
+        <div class="form-fiel">
+            <button>Submit</button>
+        </div>
     </form>
 </body>
 </html>
