style: improve form style

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,8 +29,8 @@
             <label class="form-label">Quantity</label>
             <input type="text" class="form-input input-quantity" placeholder="Quantity">
         </div>
-        <div class="form-fiel">
-            <button>Submit</button>
+        <div class="form-fiel full-width">
+            <button class="form-button">Submit</button>
         </div>
     </form>
 </body>
