feat: Part object implemented

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,27 +11,28 @@
     <form class="form">
         <div class="form-field">
             <label class="form-label">ID</label>
-            <input type="text" class="form-input input-id" placeholder="id">
+            <input type="text" class="form-input" id="input-id" placeholder="id">
         </div>
         <div class="form-field">
             <label class="form-label">Description</label>
-            <input type="text" class="form-input input-description" placeholder="Description">
+            <input type="text" class="form-input "id="input-description" placeholder="Description">
         </div>
         <div class="form-field">
             <label class="form-label">Warehouse</label>
-            <input type="text" class="form-input input-warehouse" placeholder="Warehouse">
+            <input type="text" class="form-input "id="input-warehouse" placeholder="Warehouse">
         </div>
         <div class="form-field">
             <label class="form-label">Number Local</label>
-            <input type="text" class="form-input input-numberLocal" placeholder="Number Local">
+            <input type="text" class="form-input "id="input-numberLocal" placeholder="Number Local">
         </div>
         <div class="form-field">
             <label class="form-label">Quantity</label>
-            <input type="text" class="form-input input-quantity" placeholder="Quantity">
+            <input type="text" class="form-input "id="input-quantity" placeholder="Quantity">
         </div>
         <div class="form-fiel full-width">
             <button class="form-button">Submit</button>
         </div>
     </form>
+    <script src="part.js"></script>
 </body>
 </html>
