feat: request and corsorigin

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,9 +30,10 @@
             <input type="text" class="form-input "id="input-quantity" placeholder="Quantity">
         </div>
         <div class="form-fiel full-width">
-            <button class="form-button">Submit</button>
+            <button class="form-button" type="button"id="part-submit-button">Submit</button>
         </div>
     </form>
     <script src="part.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
